Fixed z-index for list-filter-selector and list-page-chart and bump version 2.0.65

--- a/src/scss/components/list_page.scss
+++ b/src/scss/components/list_page.scss
@@ -181,7 +181,6 @@
   border-bottom: 1px solid #dce3e6;
   display: inline-block;
   position: relative;
-  z-index: 2;
 
   &:focus {
     border-color: #5269de;
@@ -284,7 +283,7 @@
   border-radius: 8px;
   padding: 10px 20px 20px;
   margin: 0 24px 24px;
-  z-index: 1;
+  z-index: 0;
 }
 
 @media (max-width: 991.98px) {
